Added button for color change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,9 @@
         android:layout_height="wrap_content"
         android:text="Add 1" />
 
+    <Button
+        android:id="@+id/button_change_color"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Change Color" />
 </LinearLayout>
